--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -43,7 +43,7 @@ menu:
   archives: /archives
   tags: /tags
   #sitemap: /sitemap.xml
-  #commonweal: /404.html
+  #commonweal: /404.HTML
 
 
 # Enable/Disable menu icons.
