--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Jesse的博客
 subtitle:
-description: This is my blog
+description: 但行好事，莫问前程。不忘初心，方得始终。
 author: Jesse
 language: zh-Hans
 timezone:
