更新方式改变
1. 改链接方式为git提交方式
2. 改变工程资源文件名

--- a/_config.yml
+++ b/_config.yml
@@ -69,5 +69,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/FriendlyJesse/FriendlyJesse.github.io
+  repo: git@github.com:FriendlyJesse/FriendlyJesse.github.io.git
   branch: master
