--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "docs:preview": "vitepress preview"
   },
   "devDependencies": {
-    "vitepress": "^1.1.4"
+    "vitepress": "^1.1.4",
+    "vitepress-sidebar": "^1.22.0"
   }
 }
