--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "docs:preview": "vitepress preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "sass": "^1.76.0",
+    "tailwindcss": "^3.4.3",
     "vitepress": "^1.1.4",
     "vitepress-sidebar": "^1.22.0"
   }
