--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "tailwindcss": "^3.4.3",
     "vitepress": "^1.1.4",
     "vitepress-sidebar": "^1.22.0"
+  },
+  "dependencies": {
+    "element-plus": "^2.7.2"
   }
 }
